# edgedeploy

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.yaml
docs/: architecture.md  iso_26262_compliance.md
docs/adr/: ADR-001-quantization-strategy.md  ADR-002-drift-ensemble.md  ADR-003-canary-deployment.md  ADR-004-requirements-traceability.md
fixtures/: __init__.py  demo_model.py  drift_scenarios.py  safety_requirements.json
infra/: main.tf  outputs.tf  variables.tf
lambda/: handler.py  requirements.txt
scripts/: run_drift_eval.py  run_qat_eval.py
src/: __init__.py  config.py  exceptions.py  schemas.py
src/deployment/: __init__.py  canary.py
src/drift/: __init__.py  drift_ensemble.py
src/export/: __init__.py  onnx_exporter.py
src/optimization/: __init__.py  quantization_engine.py
src/safety/: __init__.py  requirements_tracer.py
tests/: __init__.py  conftest.py  test_canary.py  test_drift_ensemble.py  test_onnx_exporter.py  test_quantization_engine.py  test_requirements_tracer.py
