[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgedeploy"
version = "0.1.0"
description = "ISO 26262-compliant MLOps pipeline for automotive edge deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ashok", email = "ashok@example.com" }]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["torch.*", "torchvision.*", "onnx.*", "onnxruntime.*", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = ["slow: marks tests as slow"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 75


